--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
         <div class="w1200">
             <div class="left">您好，欢迎光临京东！尊敬的 {% name %}</div>
             <div class="right"><a href="./member.html">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a
-                    href="#">在线客服</a>|<a href="./shopcar.html">购物车<b>0</b>件</a></div>
+                    href="#">在线客服</a>|<a href="./shopcar.html">购物车</div>
             <div class="clear"></div>
         </div>
     </div>
@@ -52,12 +52,12 @@
                     <input type="submit" value="搜索" class="sub" />
                 </form>
                 <p><a href="#">iPhone</a>|<a href="#">MacBook</a>|<a href="#">iPad</a>|<a href="#">MacPro</a>|<a
-                    href="#">MacMini</a>|<a href="#">AppWatch</a>|<a href="#">iMAC</a>|<a href="#">AirPods</a></p>
+                        href="#">MacMini</a>|<a href="#">AppWatch</a>|<a href="#">iMAC</a>|<a href="#">AirPods</a></p>
             </div>
             <div class="s_r">
                 <dl>
                     <dt>
-                        <p>购物车<span>0</span></p>
+                        <p>购物车</p>
                     </dt>
                     <dd>客服电话：<b>400-0139-038</b></dd>
                 </dl>
@@ -152,10 +152,10 @@
             </div>
         </div>
 
-        
+
         <div class="idx02">
             <dl>
-    
+
                 <dd>
                     {% pic2 %}
                 </dd>
@@ -184,10 +184,10 @@
     <!--footer-->
 
     <!--float_right-->
-    
+
 
     <!--float_left-->
-   
+
     <script language="javascript" type="text/javascript">
         $(function () {
             var dv = $(".idx01").offset().top;
