--- a/templates/payply.html
+++ b/templates/payply.html
@@ -51,30 +51,20 @@
 
     <div class="menu">
         <div class="w1200">
-            <div class="item" id="nav"><a href="#" class="nav">全部商品分类</a>
-                <div class="nav_son">
-                    <ul>
-                        <li class="li01"><a href="#">功能产品</a></li>
-                        <li class="li02"><a href="#">服装箱包</a></li>
-                        <li class="li03"><a href="#">美妆护肤</a></li>
-                        <li class="li04"><a href="#">珠宝饰品</a></li>
-                        <li class="li05"><a href="#">数码家电</a></li>
-                        <li class="li06"><a href="#">食品茶酒</a></li>
-                        <li class="li07"><a href="#">运动体育</a></li>
-                        <li class="li08"><a href="#">家居家纺</a></li>
-                        <li class="li09"><a href="#">生活服务</a></li>
-                        <li class="li10"><a href="#">其他</a></li>
-                    </ul>
+            <div class="w1200">
+                <div class="item" id="nav"><a href="#" class="nav">全部商品分类</a>
+                    <div>
+                    </div>
+                </div>
+                <div class="w1200">
+                    <div class="item"><a href="./index.html" class="home">商城首页</a></div>
+                    <div class="item"><a href="#">iPhone</a></div>
+                    <div class="item"><a href="#">MacBook</a></div>
+                    <div class="item"><a href="#">MacMini</a></div>
+                    <div class="item"><a href="#">Wath</a></div>
+                    <div class="item"><a href="#">iPad</a></div>
                 </div>
             </div>
-            <div class="item"><a href="#" class="home">商城首页</a></div>
-            <div class="item"><a href="#">易易特色</a></div>
-            <div class="item"><a href="#">热销产品</a></div>
-            <div class="item"><a href="#">新品上市</a></div>
-            <div class="item"><a href="#">精品推荐</a></div>
-            <div class="item"><a href="#">生活服务</a></div>
-        </div>
-    </div>
 
 
     <div class="w1200">
@@ -85,7 +75,7 @@
             <div class="pay_lc"><span class="sp01">我的购物车</span><span class="sp02">填写提交信息表单</span><span
                     class="sp03">在线支付</span></div>
             <div class="pay_w"><img src="images/ico13.jpg" />
-                <p>订单已提交成功，订单号YYC20150920175695，请您尽快完成付款！<br />应付款：<font>3083.00元</font>
+                <p>订单已提交成功，订单号YYC20150920175695，请您尽快完成付款！<br />应付款：<font>{% jb %}元</font>
                 </p>
             </div>
             <dl>
@@ -93,25 +83,8 @@
                 <dd>
                     <div class="title"><input type="radio" value="" checked="checked" />在线支付</div>
                     <div class="card">
-                        <p>银行或第三方支付机构</p>
-                        <ul>
-                            <li><input type="radio" value="" checked="checked" name="pay" id="zfb" /><label
-                                    for="zfb"><img src="images/ico15.jpg" /></label></li>
-                            <li><input type="radio" value="" name="pay" id="gs" /><label for="gs"><img
-                                        src="images/ico14.jpg" /></label></li>
-                            <li><input type="radio" value="" name="pay" id="wx" /><label for="wx"><img
-                                        src="images/ico16.jpg" /></label></li>
-                            <li><input type="radio" value="" name="pay" id="ny" /><label for="ny"><img
-                                        src="images/ico17.jpg" /></label></li>
-                            <li><input type="radio" value="" name="pay" id="zg" /><label for="zg"><img
-                                        src="images/ico18.jpg" /></label></li>
-                            <li><input type="radio" value="" name="pay" id="js" /><label for="js"><img
-                                        src="images/ico19.jpg" /></label></li>
-                            <li><input type="radio" value="" name="pay" id="xy" /><label for="xy"><img
-                                        src="images/ico20.jpg" /></label></li>
-                            <li><input type="radio" value="" name="pay" id="zs" /><label for="zs"><img
-                                        src="images/ico21.jpg" /></label></li>
-                        </ul>
+                        <img src="images/alipay.jpg" width="500px" />
+                        <img src="images/wechat.png" width="500px" />
                         <div class="clear"></div>
                     </div>
                     <div class="title"><input type="radio" value="" />货到付款</div>
