--- a/templates/info.html
+++ b/templates/info.html
@@ -4,8 +4,52 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>提交订单信息</title>
 <link href="css/style.css" type="text/css" rel="stylesheet" />
-<script src="js/jquery-1.7.min.js" type="text/javascript"></script>
-<script src="js/common.js"  type="text/javascript"></script>
+<script src="js/jquery-1.5.1.js">
+</script>
+<script src="js/common.js" type="text/javascript"></script>
+<script>
+            $(document).ready(function () {
+            $("#submit1").click(function () {
+                local_information1 = $("#local_information").val()
+                local_information = local_information1
+                postal_code  = $("#postal_code").val()
+                detailed_address = $("#detailed_address").val()
+                consignee = $("#consignee").val()
+                mobile_phone  = $("#mobile_phone").val()
+                phone = $("#phone").val()
+                if (!isNaN(local_information1)) {
+                    alert("所在地区输入格式不正确")
+                    window.location.reload()
+
+                } else if(postal_code.length !== 6){
+                    alert("邮政编码不能为空并且只能为6位数字！")
+                    window.location.reload()
+                } else if(mobile_phone.length !== 11){
+                    alert(mobile_phone)
+                    alert("手机号码不能为空并且只能为11位！")
+                    window.location.reload()
+                } else if(phone.length > 8){
+                    alert("电话号码不能为空并且最多8位数字！")
+                    window.location.reload()
+                } else{
+                        alert("订单成功提交！")
+                        $.post("./info_ok.html",
+                        {
+                            local_information: local_information,
+                            postal_code: postal_code,
+                            detailed_address: detailed_address,
+                            consignee: consignee,
+                            mobile_phone: mobile_phone,
+                            phone: phone
+                        },
+                        function (data, status) {
+                            location.href="./payply.html"
+                        })
+                }
+
+            });
+        });
+</script>
 
 </head>
 <body class="index">
@@ -13,7 +57,7 @@
 
 <div class="top">
 	<div class="w1200">
-		<div class="left">您好，欢迎光临易易城！<div class="left">您好，欢迎光临易易城！{% name %}</div></div>
+		<div class="left">您好，欢迎光临京东！尊敬的 {% name %}</div>
         <div class="right"><a href="./member.html">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="./shopcar.html">购物车<b>0</b>件</a></div>
         <div class="clear"></div>
     </div>
@@ -23,12 +67,12 @@
 	<div class="w1200">
     	<div class="logo"><a href="#"></a></div>
         <div class="search">
-            <form action="./product.html" class="form" method="POST">
-                <input type="text" value="输入商品关键字" name="keyword" class="txt"
-                    onfocus="if(value=='输入商品关键字') {value=''}" onblur="if(value=='') {value='输入商品关键字'}" />
-                <input type="submit" value="搜索" class="sub" />
+        	<form action="#" class="form">
+        		<input type="text" value="输入商品关键字" name="keyword" class="txt" onfocus="if(value=='输入商品关键字') {value=''}" onblur="if(value=='') {value='输入商品关键字'}"/>
+                <input type="submit" value="搜索" class="sub"/>
             </form>
-        	<p><a href="#">iphone6s</a>|<a href="#">面膜</a>|<a href="#">婚庆床品</a>|<a href="#">运动鞋</a>|<a href="#">眼霜</a>|<a href="#">月饼</a>|<a href="#">智能手机</a>|<a href="#">连衣裙</a></p>
+            <p><a href="#">iPhone</a>|<a href="#">MacBook</a>|<a href="#">iPad</a>|<a href="#">MacPro</a>|<a
+                href="#">MacMini</a>|<a href="#">AppWatch</a>|<a href="#">iMAC</a>|<a href="#">AirPods</a></p>
         </div>
         <div class="s_r">
         	<dl>
@@ -43,27 +87,13 @@
 <div class="menu">
 	<div class="w1200">
     	<div class="item" id="nav"><a href="#" class="nav">全部商品分类</a>
-        	<div class="nav_son">
-            	<ul>
-                	<li class="li01"><a href="#">功能产品</a></li>
-                    <li class="li02"><a href="#">服装箱包</a></li>
-                    <li class="li03"><a href="#">美妆护肤</a></li>
-                    <li class="li04"><a href="#">珠宝饰品</a></li>
-                    <li class="li05"><a href="#">数码家电</a></li>
-                    <li class="li06"><a href="#">食品茶酒</a></li>
-                    <li class="li07"><a href="#">运动体育</a></li>
-                    <li class="li08"><a href="#">家居家纺</a></li>
-                    <li class="li09"><a href="#">生活服务</a></li>
-                    <li class="li10"><a href="#">其他</a></li>
-                </ul>
-            </div>
         </div>
     	<div class="item"><a href="./index.html" class="home">商城首页</a></div>
-        <div class="item"><a href="#">易易特色</a></div>
-        <div class="item"><a href="#">热销产品</a></div>
-        <div class="item"><a href="#">新品上市</a></div>
-        <div class="item"><a href="#">精品推荐</a></div>
-        <div class="item"><a href="#">生活服务</a></div>
+        <div class="item"><a href="#">iPhone</a></div>
+        <div class="item"><a href="#">MacBook</a></div>
+        <div class="item"><a href="#">MacMini</a></div>
+        <div class="item"><a href="#">Wath</a></div>
+        <div class="item"><a href="#">iPad</a></div>
     </div>
 </div>
 
@@ -77,61 +107,24 @@
         <dl class="info">
         	<dt><span>确认收货地址</span></dt>
             <dd>
-            	<div class="item"><span><font>*</font>所在地区：</span><select><option value="广东省">广东省</option></select><select><option value="深圳市">深圳市</option></select><input type="tex" class="txt"/></div>
-            	<div class="item"><span><font>*</font>邮政编码：</span><input type="tex" class="txt"/></div>
+            	<div class="item"><span><font>*</font>所在地区：</span><input type="tex" class="txt" id="local_information"/></div>
+            	<div class="item"><span><font>*</font>邮政编码：</span><input type="tex" class="txt" id="postal_code"/></div>
                 <div class="item">
                 	<table width="100%" border="0" cellspacing="0" cellpadding="0">
                       <tr>
                         <td width="8%"><span><font>*</font>详细地址：</span></td>
-                        <td width="92%"><textarea></textarea></td>
+                        <td width="92%"><textarea id="detailed_address"></textarea></td>
                       </tr>
                     </table>
                 </div>
-                <div class="item"><span><font>*</font>收货人姓名：</span><input type="tex" class="txt"/></div>
-                <div class="item"><span><font>*</font>手机：</span><input type="tex" class="txt"/></div>
-                <div class="item"><span><font>*</font>电话：</span><input type="tex" class="txt"/></div>
-                <div class="item"><input type="submit" class="sub" value="保存收货人信息"/></div>
+                <div class="item"><span><font>*</font>收货人姓名：</span><input type="tex" class="txt" id="consignee"/></div>
+                <div class="item"><span><font>*</font>手机：</span><input type="tex" class="txt" id="mobile_phone"/></div>
+                <div class="item"><span><font>*</font>电话：</span><input type="tex" class="txt" id="phone"/></div>
+                <div class="item"><input type="button" class="sub" value="保存收货人信息" id="submit1"/></div>
             </dd>
         </dl>
         
         <dl>
-        	<dt><span>确认订单信息</span></dt>
-            <dd>
-            	<table width="100%" cellpadding="0" cellspacing="0" border="0">
-                  <tr class="tr_t">
-                  	<td width="2%">&nbsp;</td>
-                    <td width="48%">商品</td>
-                    <td width="25%">单价</td>
-                    <td width="13%">数量</td>
-                    <td width="12%">小计</td>
-                  </tr>
-                  <tr class="tr_c">
-                  	<td>&nbsp;</td>
-                    <td>
-                    	<table width="100%" border="0" cellspacing="0" cellpadding="0">
-                          <tr>
-                            <td width="15%"><img src="images/ico23.jpg"/></td>
-                            <td width="85%"><a href="#" class="title">头层牛皮真皮沙发 客厅家具 FPSF0814 进口中厚皮 双人位+单人位+贵妃位</a></td>
-                          </tr>
-                        </table>
-                    </td>
-                    <td class="price">￥3083.00</td>
-                    <td>1</td>
-                    <td class="price">￥3083.00</td>
-                  </tr>
-                  <tr class="tr_d">
-                    <td colspan="7">
-                    	<table width="100%" border="0" cellspacing="0" cellpadding="0">
-                          <tr>
-                          	<td width="3%">&nbsp;</td>
-                            <td width="6%">买家留言：</td>
-                            <td width="75%"><input type="text" value="" class="msg"/></td>
-                            <td width="6%">应付金额：</td>
-                            <td width="10%" class="all_price"><font>￥3083.00</font></td>
-                          </tr>
-                        </table>
-                    </td>
-                  </tr>
                 </table>
                 <div class="clear"></div>
                 
