--- a/templates/login.html
+++ b/templates/login.html
@@ -62,13 +62,13 @@
     <div class="logo"><a href="#"></a></div>
     <div class="font-d">欢迎登陆</div>
     <div class="search">
-        <form action="#" class="form">
-            <input type="text" value="输入商品关键字" name="keyword" class="txt" onfocus="if(value=='输入商品关键字') {value=''}"
-                   onblur="if(value=='') {value='输入商品关键字'}"/>
-            <input type="submit" value="搜索" class="sub"/>
+        <form action="./product.html" class="form" method="POST">
+            <input type="text" value="输入商品关键字" name="keyword" class="txt"
+                onfocus="if(value=='输入商品关键字') {value=''}" onblur="if(value=='') {value='输入商品关键字'}" />
+            <input type="submit" value="搜索" class="sub" />
         </form>
-        <p><a href="#">iphone6s</a>|<a href="#">面膜</a>|<a href="#">婚庆床品</a>|<a href="#">运动鞋</a>|<a href="#">眼霜</a>|<a
-                href="#">月饼</a>|<a href="#">智能手机</a>|<a href="#">连衣裙</a></p>
+        <p><a href="#">iPhone</a>|<a href="#">MacBook</a>|<a href="#">iPad</a>|<a href="#">MacPro</a>|<a
+            href="#">MacMini</a>|<a href="#">AppWatch</a>|<a href="#">iMAC</a>|<a href="#">AirPods</a></p>
     </div>
     <div class="s_r"><img src="images/tel.jpg"/></div>
     <div class="clear"></div>
