--- a/templates/index.html
+++ b/templates/index.html
@@ -30,22 +30,23 @@
 
 <body class="index">
     <div class="top_ad">
-        <div class="w1200"><a href="#" id="close"></a></div>
+        <div class="w1200"><a href="./index.html" id="close"></a></div>
     </div>
 
     <div class="top">
         <div class="w1200">
             <div class="left">您好，欢迎光临京东！尊敬的 {% name %}</div>
             <div class="right"><a href="./member.html">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a
-                    href="#">在线客服</a>|<a href="./shopcar.html">购物车</div>
+                    href="http://wpa.qq.com/msgrd?v=3&uin=952223950&site=qq&menu=yes">在线客服</a>|<a href="./shopcar.html">购物车</div>
             <div class="clear"></div>
         </div>
     </div>
 
     <div class="head">
         <div class="w1200">
-            <div class="logo"><a href="#"></a></div>
+            <div class="logo"><a href="./index.html"></a></div>
             <div class="search">
+                
                 <form action="./product.html" class="form" method="POST">
                     <input type="text" value="输入商品关键字" name="keyword" class="txt"
                         onfocus="if(value=='输入商品关键字') {value=''}" onblur="if(value=='') {value='输入商品关键字'}" />
@@ -182,12 +183,12 @@
     </div>
 
     <!--footer-->
-
     <!--float_right-->
 
 
     <!--float_left-->
-
+    <script type="text/javascript" src="https://api.uixsj.cn/hitokoto/en.php?code=js"></script>
+        <div id="enhitokoto"><script>enhitokoto()</script></div>
     <script language="javascript" type="text/javascript">
         $(function () {
             var dv = $(".idx01").offset().top;
