--- a/templates/shopcar.html
+++ b/templates/shopcar.html
@@ -112,7 +112,7 @@
 <div class="top">
 	<div class="w1200">
             <div class="left">您好，欢迎光临京东！尊敬的 {% name %}</div>
-        <div class="right"><a href="#">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="#">在线客服</a>|<a href="#">购物车</a></div>
+        <div class="right"><a href="#">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a href="http://wpa.qq.com/msgrd?v=3&uin=952223950&site=qq&menu=yes">在线客服</a>|<a href="#">购物车</a></div>
         <div class="clear"></div>
     </div>
 </div>
@@ -257,9 +257,9 @@
             <dl>
                 <dt>客服中心</dt>
                 <dd>
-                    <a href="#">常见问题</a>
-                    <a href="#">联系客服</a>
-                    <a href="#">投诉与建议</a>
+                    <a href="http://wpa.qq.com/msgrd?v=3&uin=952223950&site=qq&menu=yes">常见问题</a>
+                    <a href="http://wpa.qq.com/msgrd?v=3&uin=952223950&site=qq&menu=yes">联系客服</a>
+                    <a href="http://wpa.qq.com/msgrd?v=3&uin=952223950&site=qq&menu=yes">投诉与建议</a>
                 </dd>
             </dl>
             <div class="ewm"><img src="images/home/ico35.png"/></div>
