--- a/templates/product.html
+++ b/templates/product.html
@@ -20,7 +20,7 @@
         <div class="w1200">
             <div class="left">您好，欢迎光临京东！尊敬的 {% name %}</div>
             <div class="right"><a href="./member.html">我的会员中心</a>|<a href="#">收藏夹</a>|<a href="#">服务中心</a>|<a
-                    href="#">在线客服</a>|<a href="./shopcar.html">购物车<b>0</b>件</a></div>
+                    href="http://wpa.qq.com/msgrd?v=3&uin=952223950&site=qq&menu=yes">在线客服</a>|<a href="./shopcar.html">购物车<b>0</b>件</a></div>
             <div class="clear"></div>
         </div>
     </div>
