--- a/templates/member.html
+++ b/templates/member.html
@@ -197,11 +197,7 @@
                             </div>
                             <div class="item"><span>
                                     <font>*</font>联系地址：
-                                </span><select>
-                                    <option value="广东省">广东省</option>
-                                </select><select>
-                                    <option value="深圳市">深圳市</option>
-                                </select><input type="tex" class="txt" name="address" id="address" /></div>
+                                </span><input type="tex" class="txt" name="address" id="address" /></div>
                             <div class="item"><input type="submit" id="submit" class="sub" value="保存" /></div>
                         </dd>
                     </form>
